argocd/clusters/superbloom/infra/sparkdash/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sparkdash
  namespace: sparkdash
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - sparkdash
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sparkdash
                port:
                  number: 5555
